--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
           <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
-          <p>GCA Geociencias Aplicadas SAS, con más de 10 años de experiencia en nuestras materias, es una consultoría que ofrece servicios de Medio Ambiente, Geotecnia y GIS.</p>
+          <p>GCA Geociencias Aplicadas SAS, con más de 10 años de experiencia en nuestras materias, es una consultoría que ofrece servicios de Medio Ambiente, Geotecnia, Recuros Hídricos y GIS.</p>
           <p>Realizamos estudios geotécnicos y geológicos en todo el territorio nacional. Tras una amplia experiencia en el campo de la Geotecnia, ofrecemos servicios técnicos en el ámbito de la ingeniería del terreno.</p>
           <p>Los campos de actuación que abordamos son principalmente estudios geotécnicos y geológicos, patología de cimentaciones e inestabilidad de laderas, estudios de suelos, proyectos de refuerzo y contención de tierras, estudios de riesgos sísmicos y geológicos. Así también, realizamos ensayos especiales en geotecnia como ensayos de penetración dinámica y ensayos presiométricos.</p>
           <p>Para la elaboración de los trabajos contamos con equipos de prospección geofísica y geotécnica, instrumentación de auscultación de movimientos, así como la colaboración con laboratorios acreditados y homologados.</p>
