--- a/agua.html
+++ b/agua.html
@@ -143,8 +143,8 @@ cnia<!DOCTYPE html>
 <!-- Sección de servicio y descripcción -->
   <section class="bienvenida text-center py-5">
       <div class="container">
-          <h2>Geotecnia</h2>
-          <p>Evaluamos las condiciones del terreno para diseñar soluciones seguras y eficientes en proyectos de ingeniería, exploración, geotecnia y análisis estructural.</p>
+          <h2>Recursos Hídricos</h2>
+          <p>Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
           <p>Somos un grupo de profesionales especializados en áreas como Geología, Geomorfología, Geotecnia e Hidrogeología con amplia experiencia profesional en la elaboración de estudios geotécnicos empleando metodologías de análisis de amplio uso en el medio, obteniendo información primaria por diferentes medios como sondeos directos, información de sensores remotos y métodos indirectos (Geofísica) a partir de los cuales, producto de su análisis y procesamiento se definen modelos geológico geotécnicos para adelantar los diseños respectivos, lo cual lo habilita a ofrecer precios competitivos y ajustados al presupuesto del cliente.</p>
       </div>
   </section>
@@ -269,7 +269,7 @@ cnia<!DOCTYPE html>
 				<div class="elementor-widget-container">
 							<ul class="elementor-icon-list-items">
 							<li class="elementor-icon-list-item">
-											<a href="https://www.geobiental.com/ensayos-geotecnicos-de-campo/ensayos-presiometricos/">
+											<a href="**">
 
 												<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-check-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>						</span>
@@ -277,7 +277,7 @@ cnia<!DOCTYPE html>
 											</a>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="https://www.geobiental.com/ensayos-geotecnicos-de-campo/calicatas/">
+											<a href="**">
 
 												<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-check-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>						</span>
@@ -285,7 +285,7 @@ cnia<!DOCTYPE html>
 											</a>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="https://www.geobiental.com/ensayos-geotecnicos-de-laboratorio/">
+											<a href="https:**">
 
 												<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-check-circle" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>						</span>
