--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">Servicios</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="geotermia.html">Geotermia</a></li>
-              <li><a class="dropdown-item" href="recursos-hidricos.html">Recursos Hídricos</a></li>
+              <li><a class="dropdown-item" href="agua.html">Recursos Hídricos</a></li>
               <li><a class="dropdown-item" href="medio-ambiente.html">Medio Ambiente</a></li>
               <li><a class="dropdown-item" href="geotecnia.html">Geotecnia</a></li>
               <li><a class="dropdown-item" href="geofisica.html">Geofísica</a></li>
