--- a/agua.html
+++ b/agua.html
@@ -261,6 +261,24 @@ cnia<!DOCTYPE html>
   <div class="parallax"></div>
 </section>
 
+
+<!-- Seccion de información de proyectos -->
+</section>
+				<section class="elementor-section elementor-top-section elementor-element elementor-element-a7b73bb elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="a7b73bb" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+						<div class="elementor-container elementor-column-gap-default">
+					<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-4690ebe" data-id="4690ebe" data-element_type="column">
+			<div class="elementor-widget-wrap elementor-element-populated">
+						<div class="elementor-element elementor-element-935f74e elementor-widget elementor-widget-heading" data-id="935f74e" data-element_type="widget" data-widget_type="heading.default">
+				<div class="elementor-widget-container">
+					<h3 class="elementor-heading-title elementor-size-default">Informes Geotécnicos y Estudios Periciales</h3>				</div>
+				</div>
+				<div class="elementor-element elementor-element-2e6f304 elementor-widget elementor-widget-spacer" data-id="2e6f304" data-element_type="widget" data-widget_type="spacer.default">
+				<div class="elementor-widget-container">
+							<div class="elementor-spacer">
+			<div class="elementor-spacer-inner"></div>
+		</div>
+          </div>
+				</div>
   
   
   <!-- Nuestro Equipo -->
