--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
   <section class="bienvenida text-center py-5">
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
-          <p>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</p>
-          <p>GCA Geociencias Aplicadas SAS, con más de 10 años de experiencia en nuestras materias, es una consultoría que ofrece servicios de Medio Ambiente, Geotecnia, Recuros Hídricos y GIS.</p>
-          <p>Realizamos estudios geotécnicos y geológicos en todo el territorio nacional. Tras una amplia experiencia en el campo de la Geotecnia, ofrecemos servicios técnicos en el ámbito de la ingeniería del terreno.</p>
-          <p>Los campos de actuación que abordamos son principalmente estudios geotécnicos y geológicos, patología de cimentaciones e inestabilidad de laderas, estudios de suelos, proyectos de refuerzo y contención de tierras, estudios de riesgos sísmicos y geológicos. Así también, realizamos ensayos especiales en geotecnia como ensayos de penetración dinámica y ensayos presiométricos.</p>
-          <p>Para la elaboración de los trabajos contamos con equipos de prospección geofísica y geotécnica, instrumentación de auscultación de movimientos, así como la colaboración con laboratorios acreditados y homologados.</p>
+          <h3>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</h3>
+          <p>GCA Geociencias Aplicadas SAS, con 9 años de experiencia en nuestras especialidades, es una empresa colombiana comprometida con ofrecer soluciones técnicas integrales en geología, geotecnia, geofísica, hidrogeología, medio ambiente y GIS. Nuestro equipo de profesionales combina experiencia, conocimiento y tecnología de vanguardia para apoyar proyectos de infraestructura, energía, agua y sostenibilidad, siempre enfocados en la protección del entorno y el desarrollo responsable.</p>
+          <p>Trabajamos de la mano con nuestros clientes, brindando asesoría especializada y ejecutando estudios y diseños con altos estándares de calidad. Nuestra pasión por la ciencia aplicada y nuestro compromiso con la excelencia nos impulsan a contribuir de manera significativa al progreso de las comunidades y sectores que atendemos, generando confianza y valor en cada proyecto.</p>
+          
       </div>
   </section>
  
