--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
   <section class="bienvenida text-center py-5">
       <div class="container">
           <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
-          <h4>Soluciones personalizadas en geología, SIG, medioambiente y análisis técnico especializado.</h4>
+          <h4>Soluciones personalizadas en geología, geotecnia, medioambiente, GIS y análisis técnico especializado.</h4>
           <p>GCA Geociencias Aplicadas SAS, con 9 años de experiencia en nuestras especialidades, es una empresa colombiana comprometida con ofrecer soluciones técnicas integrales en geología, geotecnia, geofísica, hidrogeología, medio ambiente y GIS. Nuestro equipo de profesionales combina experiencia, conocimiento y tecnología de vanguardia para apoyar proyectos de infraestructura, energía, agua y sostenibilidad, siempre enfocados en la protección del entorno y el desarrollo responsable.</p>
           <p>Trabajamos de la mano con nuestros clientes, brindando asesoría especializada y ejecutando estudios y diseños con altos estándares de calidad. Nuestra pasión por la ciencia aplicada y nuestro compromiso con la excelencia nos impulsan a contribuir de manera significativa al progreso de las comunidades y sectores que atendemos, generando confianza y valor en cada proyecto.</p>
           
