--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GCA - Geociencias Aplicadas SAS</title>
+  <title>GCA - Geoconsultores Asociados</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -115,7 +115,7 @@
 
   <!-- Top Bar -->
   <div class="top-bar text-center">
-    <span><i class="bi bi-envelope"></i> gcageociencias@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
+    <span><i class="bi bi-envelope"></i> gcageoconsultoresasociados@gmail.com | <i class="bi bi-facebook"></i> /GCA | <i class="bi bi-instagram"></i> @GCA</span>
   </div>
 
   <!-- Navigation -->
@@ -230,7 +230,7 @@
   <!-- Sección de saludo y descripcción -->
   <section class="bienvenida text-center py-5">
       <div class="container">
-          <h2>Bienvenido a GCA Geociencias Aplicadas SAS</h2>
+          <h2>Bienvenido a GCA Geoconsultores Asociados</h2>
           <h4>Soluciones personalizadas en geología, geotecnia, medioambiente, GIS y análisis técnico especializado.</h4>
           <p>GCA Geociencias Aplicadas SAS, con 9 años de experiencia en nuestras especialidades, es una empresa colombiana comprometida con ofrecer soluciones técnicas integrales en geología, geotecnia, geofísica, hidrogeología, medio ambiente y GIS. Nuestro equipo de profesionales combina experiencia, conocimiento y tecnología de vanguardia para apoyar proyectos de infraestructura, energía, agua y sostenibilidad, siempre enfocados en la protección del entorno y el desarrollo responsable.</p>
           <p>Trabajamos de la mano con nuestros clientes, brindando asesoría especializada y ejecutando estudios y diseños con altos estándares de calidad. Nuestra pasión por la ciencia aplicada y nuestro compromiso con la excelencia nos impulsan a contribuir de manera significativa al progreso de las comunidades y sectores que atendemos, generando confianza y valor en cada proyecto.</p>
@@ -377,7 +377,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container text-center">
-      <p>&copy; 2025 GCA Geociencias Aplicadas SAS. Todos los derechos reservados.</p>
+      <p>&copy; 2025 GCA Geoconsultores Asociados. Todos los derechos reservados.</p>
       <p>Especialistas en Geología, Geotecnia, Recursos Hídricos, Medio Ambiente y SIG.</p>
     </div>
   </footer>
