--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
       <div class="col-md-6 mb-4">
         <h2>Ubicación</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.914551287905!2d-74.0720922846756!3d4.710988743682147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99b6aab89627%3A0x578f2d11e77b928b!2sBogot%C3%A1%2C%20Colombia!5e0!3m2!1ses-419!2sus!4v1617763546123!5m2!1ses-419!2sus" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <p class="mt-3">Correo: contacto@ejemplo.com</p>
+        <p class="mt-3">Correo: gcageoconsultoresasociados@gmail.com</p>
       </div>
 
       <div class="col-md-6">
