--- a/index.html
+++ b/index.html
@@ -146,6 +146,24 @@
     </div>
   </nav>
 
+<!-- Botón flotante -->
+<a href="servicio-destacado.html" style="
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #594E40;
+  color: #ffffff;
+  padding: 12px 18px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  z-index: 9999;
+">
+  🌍 Servicio destacado
+</a>
+
+
 <!-- Banner Carrusel -->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
   <div class="carousel-inner" style="height: 600px; overflow: hidden; position: relative;">
