--- a/index.html
+++ b/index.html
@@ -171,39 +171,39 @@
     <div class="carousel-item active">
       <img src="banner1.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 1">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 1</h2>
-        <p>Tu descripción breve 1</p>
+        <h2>Geología</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner13.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 2">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 2</h2>
-        <p>Tu descripción breve 2</p>
+        <h2>Geomorfología</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner10.png" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 3">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
-        <p>Tu descripción breve 3</p>
+        <h2>Cartografía</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner4.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 4">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
-        <p>Tu descripción breve 3</p>
+        <h2>Amenaza y Riesgo</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner5.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 5">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
+        <h2>Geotecnia</h2>
         <p>Tu descripción breve 3</p>
       </div>
     </div>
@@ -211,24 +211,24 @@
     <div class="carousel-item">
       <img src="banner7.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 6">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
-        <p>Tu descripción breve 3</p>
+        <h2>Geo-Ecosistema</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner8.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 7">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
-        <p>Tu descripción breve 3</p>
+        <h2>Petrología</h2>
+        <p></p>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="banner9.jpg" class="d-block w-100" style="height: 600px; object-fit: cover;" alt="Imagen 8">
       <div class="carousel-caption d-none d-md-block">
-        <h2>Tu Título 3</h2>
-        <p>Tu descripción breve 3</p>
+        <h2>Recursos Hídricos</h2>
+        <p></p>
       </div>
     </div>
 
