--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <!-- Botón flotante -->
 <a href="servicio-destacado.html" style="
   position: fixed;
-  right: 20px;
+  left: 20px;
   bottom: 20px;
   background-color: #594E40;
   color: #ffffff;
