--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -143,9 +143,9 @@ cnia<!DOCTYPE html>
 <!-- Sección de servicio y descripcción -->
   <section class="bienvenida text-center py-5">
       <div class="container">
-          <h2>Recursos Hídricos</h2>
-          <p>Evaluamos y gestionamos los recursos hídricos subterráneos y superficiales para el desarrollo sostenible de proyectos y el ecosistema.</p>
-          <p>Somos un grupo de profesionales especializados en áreas como Geología, Geomorfología, Geotecnia e Hidrogeología con amplia experiencia profesional en la elaboración de estudios geotécnicos empleando metodologías de análisis de amplio uso en el medio, obteniendo información primaria por diferentes medios como sondeos directos, información de sensores remotos y métodos indirectos (Geofísica) a partir de los cuales, producto de su análisis y procesamiento se definen modelos geológico geotécnicos para adelantar los diseños respectivos, lo cual lo habilita a ofrecer precios competitivos y ajustados al presupuesto del cliente.</p>
+          <h2>Licencia de Reconocimiento Predial</h2>
+          <p>A través de la Curaduría Pública Social se reconocerán las viviendas que se construyeron sin licencia de construcción, localizadas en barrios legalizados urbanísticamente, y cuyo avalúo catastral sea inferior a 150 salarios mínimos (VIS).</p>
+          <p>Los trámites de Apoyo Técnico y Reconocimiento a Edificaciones Existentes podrán radicarse desde esta página web o a través de la Ventanilla de Servicio al Ciudadano de la entidad.</p>
       </div>
   </section>
  
