--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -149,112 +149,81 @@ cnia<!DOCTYPE html>
       </div>
   </section>
  
-<!-- Sección de Servicios -->
-<section class="services py-5">
-  <div class="container">
-    <h2 class="mb-5 text-center">Nuestros Servicios</h2>
-    <div class="row g-4">
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="geotermia.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-geotermia.png" class="service-icon" alt="Geotermia">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Exploración</h5>
-              <p class="card-text">Desarrollamos modelos hidrogeológicos conceptuales y numéricos, cálculos de balance hídrico, pruebas de bombeo y estimaciones de reservas hídricas subterráneas.</p>
-            </div>
-          </div>
-        </a>
+<section class="container my-5">
+  <h2 class="text-center mb-4">Nuestros Servicios</h2>
+  <div class="row">
+    
+    <!-- 1. Apoyo Técnico -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/apoyo_tecnico.png" alt="Apoyo Técnico" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>Apoyo Técnico</h5>
+        <p>Asistencia técnica y social que contempla el levantamiento arquitectónico y peritaje técnico que realizan profesionales de la Caja de la Vivienda Popular, para determinar las obras que mejoren las condiciones habitacionales de la vivienda, y permitan el reconocimiento de la edificación.</p>
+        <a href="#">Conoce los requisitos y condiciones →</a>
       </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="agua.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-recursos_hidricos.png" class="service-icon" alt="Recursos Hídricos">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Geofísica</h5>
-              <p class="card-text">Implementamos métodos de geoeléctrica y tomografías para identificar características hidrogeológicas esenciales para la gestión ambiental.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="ambiente.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-ambiente.png" class="service-icon" alt="Geo-Ecosistema">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Inventario de puntos de agua</h5>
-              <p class="card-text">Realizamos censos y evaluaciones de fuentes hídricas para planes de manejo y conservación.</p>                
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="geotecnia.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-geotecnia.png" class="service-icon" alt="Geotecnia">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">GIS aplicado a hidrogeología</h5>
-              <p class="card-text">Procesamos y analizamos datos geoespaciales para apoyar la gestión, monitoreo y conservación de recursos hídricos.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="sig.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-sig.png" class="service-icon" alt="SIG">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Análisis geomecánico de reservorios</h5>
-              <p class="card-text">Evaluamos la estabilidad y comportamiento de reservorios de agua subterránea para garantizar su aprovechamiento sostenible.</p>                               
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="geofisica.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-geofisica.png" class="service-icon" alt="Geofísica">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Acotamiento de Rondas Hídricas</h5>
-              <p class="card-text">Analisis geológico y geomorfológico de los cuerpos de agua, dinámica aluvial, cambios de cauce, entre otros.</p>                
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-4 d-flex align-items-stretch">
-        <a href="avr.html" class="w-100 text-decoration-none">
-          <div class="card h-100 text-center shadow-sm">
-            <div class="p-4">
-              <img src="icon-avr.png" class="service-icon" alt="AVR">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Amenaza, Vulnerabilidad y Riesgo</h5>
-              <p class="card-text">Identificamos, analizamos y gestionamos amenazas, vulnerabilidades y riesgos para garantizar el desarrollo seguro y sostenible de tus proyectos.</p>
-            </div>
-          </div>
-        </a>
-      </div>
-
     </div>
+
+    <!-- 2. Reconocimiento a Edificaciones -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/reconocimiento.png" alt="Reconocimiento" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>Reconocimiento a Edificaciones</h5>
+        <p>Declaración de la existencia de una edificación que reconoce las viviendas a partir del uso establecido en la legalización urbanística del barrio. La Curaduría Pública Social podrá tramitar licencias urbanísticas de construcción para ampliar, modificar y adecuar las viviendas en el Proyecto Piloto Plan Terrazas.</p>
+        <a href="#">Conoce los requisitos y condiciones →</a>
+      </div>
+    </div>
+
+    <!-- 3. Plan Terrazas -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/plan_terrazas.png" alt="Plan Terrazas" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>Plan Terrazas</h5>
+        <p>La Alcaldía Mayor de Bogotá, por primera vez, reconoce las viviendas construidas con el esfuerzo de las familias. El proyecto piloto Plan Terrazas busca identificar beneficiarios y facilitar el reforzamiento o ampliación de las viviendas.</p>
+      </div>
+    </div>
+
+    <!-- 4. Beneficios -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/beneficios.png" alt="Beneficios" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>Beneficios</h5>
+        <ul>
+          <li>Disminuir la vulnerabilidad frente a terremotos.</li>
+          <li>Mejorar condiciones de habitabilidad.</li>
+          <li>Acceso a servicios para mejorar ingresos.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 5. ¿Qué es Curaduría Pública Social? -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/curaduria_social.png" alt="Curaduría Pública" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>¿Qué es Curaduría Pública Social?</h5>
+        <ul>
+          <li>Función pública ejercida por la Caja de la Vivienda Popular.</li>
+          <li>Tramita reconocimiento VIS y licencias urbanísticas.</li>
+          <li>Ofrece apoyo técnico gratuito y reconocimiento a edificaciones existentes.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 6. ¿Qué es Curaduría Urbana? -->
+    <div class="col-md-6 mb-4 d-flex">
+      <img src="img/curaduria_urbana.png" alt="Curaduría Urbana" class="me-3" style="width:60px; height:60px;">
+      <div>
+        <h5>¿Qué es Curaduría Urbana?</h5>
+        <ul>
+          <li>Oficina privada que ejerce función pública.</li>
+          <li>Otorga licencias urbanísticas cumpliendo normativas.</li>
+          <li>Requiere pago de obligaciones para expedir licencias.</li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </section>
+
 
 <!-- División con Imagen - efecto Parallax -->
 <section class="division-imagen-parallax">
