--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -230,17 +230,55 @@ cnia<!DOCTYPE html>
   <div class="parallax"></div>
 </section>
 
+<section class="container my-5">
+  <!-- Parte 1: Título y descripción -->
+  <div class="text-center mb-5">
+    <h2 class="fw-bold">RECONOCIMIENTO A EDIFICACIÓN</h2>
+    <p class="lead">Es el trámite relacionado con la solicitud de reconocimiento de edificaciones, de la licencia urbanística de construcción y de aprobación de otras actuaciones.</p>
+  </div>
 
-<!-- Seccion de información de proyectos -->
-
-  
-  <!-- Nuestro Equipo -->
-  <section class="team-section text-center">
-    <div class="container">
-      <h2>Nuestro Equipo</h2>
-      <p>Profesionales expertos comprometidos con brindar soluciones de alta calidad en cada proyecto.</p>
+  <!-- Parte 2: Dos columnas -->
+  <div class="row">
+    <!-- Columna 1: Requisitos -->
+    <div class="col-md-6 mb-4">
+      <h5 class="text-primary">Requisitos y condiciones</h5>
+      <ul>
+        <li><strong>Cédula de ciudadanía:</strong> 1 copia legible.</li>
+        <li><strong>Formulario Único Nacional - FUN:</strong> 1 original firmado. <a href="#">Descargue aquí</a></li>
+        <li><strong>Certificado de tradición y libertad:</strong> 1 copia con vigencia menor a 30 días.</li>
+        <li><strong>Certificado catastral:</strong> 1 copia o impuesto predial del último año.</li>
+        <li><strong>Peritaje Técnico:</strong> 1 original.</li>
+        <li><strong>Tarjeta o matrícula profesional:</strong> 1 copia por profesional interviniente.</li>
+        <li><strong>Poder:</strong> 1 original otorgado ante notario o juez. <a href="#">Descargue aquí</a></li>
+        <li><strong>Resolución de legalización del barrio:</strong> 1 copia legible.</li>
+        <li><strong>Escritura pública:</strong> 1 copia, o documento de propiedad o recibo de servicios públicos.</li>
+        <li><strong>Plano de loteo y manzana catastral:</strong> 1 copia de cada uno.</li>
+        <li><strong>Declaración de antigüedad:</strong> 1 original bajo juramento. <a href="#">Descargue aquí</a></li>
+        <li><strong>Plano arquitectónico existente:</strong> 1 original firmado por arquitecto.</li>
+      </ul>
     </div>
-  </section>
+
+    <!-- Columna 2: Costos y dependencias -->
+    <div class="col-md-6 mb-4">
+      <h5 class="text-primary">Costo</h5>
+      <p><strong>Sin costo</strong> para el solicitante.</p>
+
+      <h5 class="text-primary mt-4">Dependencias Asociadas</h5>
+      <ul>
+        <li>Ministerio de Vivienda, Ciudad y Territorio</li>
+        <li>Alcaldías locales</li>
+        <li>Secretaría Distrital del Hábitat</li>
+        <li>Secretaría Distrital de Planeación</li>
+        <li>Secretaría Distrital de Hacienda</li>
+        <li>Superintendencia de Notariado y Registro</li>
+        <li>Consejo Profesional Nacional de Ingeniería – COPNIA</li>
+        <li>Consejo Profesional Nacional de Arquitectura – CNNA</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
     
             
   <!-- Footer -->
