--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -208,6 +208,13 @@ cnia<!DOCTYPE html>
 
 <section class="container my-5">
   <h2 class="text-center mb-4">Estudio de Suelos - Estudio Geotécnico Definitivo - NSR-10</h2>
+  <p>De acuerdo al NSR-10, el Estudio Geotécnico incluye el conjunto de actividades que
+comprenden el reconocimiento de campo, la investigación del subsuelo, los análisis y
+recomendaciones de ingeniería necesarios para el diseño y construcción de las obras
+en contacto con el suelo, de tal forma que se garantice un comportamiento adecuado
+en la edificación, protegiendo ante todo la integridad de las personas ante cualquier
+fenómeno externo, además de proteger vías, instalaciones de servicios públicos,
+predios y construcciones vecinas.</p>
   <div class="row">
     
     <!-- 1. Apoyo Técnico -->
@@ -225,13 +232,8 @@ cnia<!DOCTYPE html>
       <img src="img/reconocimiento.png" alt="Reconocimiento" class="me-3" style="width:60px; height:60px;">
       <div>
         <h5>Exploración del suelo</h5>
-        <p>De acuerdo al NSR-10, el Estudio Geotécnico incluye el conjunto de actividades que
-comprenden el reconocimiento de campo, la investigación del subsuelo, los análisis y
-recomendaciones de ingeniería necesarios para el diseño y construcción de las obras
-en contacto con el suelo, de tal forma que se garantice un comportamiento adecuado
-en la edificación, protegiendo ante todo la integridad de las personas ante cualquier
-fenómeno externo, además de proteger vías, instalaciones de servicios públicos,
-predios y construcciones vecinas.</p>
+        <p>Los sondeos son exploraciones directas del subsuelo que se realizan mediante perforaciones verticales (o inclinadas), con el fin de obtener información sobre la naturaleza, estratigrafía, propiedades físicas y mecánicas de los suelos y rocas presentes en un sitio específico.
+          Estos se pueden realizar con recuperación de muestras (alteradas o inalteradas), ensayos in situ (como el SPT - Standard Penetration Test) o con instrumentación geotécnica.</p>
         <a href="#">Conoce los requisitos y condiciones →</a>
       </div>
     </div>
@@ -240,8 +242,23 @@ predios y construcciones vecinas.</p>
     <div class="col-md-6 mb-4 d-flex">
       <img src="img/plan_terrazas.png" alt="Plan Terrazas" class="me-3" style="width:60px; height:60px;">
       <div>
-        <h5>Plan Terrazas</h5>
-        <p>La Alcaldía Mayor de Bogotá, por primera vez, reconoce las viviendas construidas con el esfuerzo de las familias. El proyecto piloto Plan Terrazas busca identificar beneficiarios y facilitar el reforzamiento o ampliación de las viviendas.</p>
+        <h5>Sondeos mínimos según la NSR-10 (Título H – Estudios Geotécnicos)</h5>
+        <p>La NSR-10, en su Título H (Artículo H.4.2), establece los criterios mínimos de investigación del suelo para edificaciones:
+
+Para estudios de suelos (artículo H.4.2.3):
+Mínimo 2 sondeos para edificaciones de hasta 2 pisos o áreas menores a 500 m².
+
+Para edificaciones mayores a 2 pisos o áreas mayores a 500 m²:
+
+Se debe realizar al menos 1 sondeo por cada 400 m² de construcción proyectada, distribuidos uniformemente en la planta.
+
+La profundidad de los sondeos debe:
+
+Alcanzar al menos una vez y media la dimensión menor del edificio, o
+
+Hasta que se llegue a un estrato competente y sin cambios significativos, o
+
+Cuando el esfuerzo vertical efectivo adicional sea menor al 10% del esfuerzo vertical total existente.</p>
       </div>
     </div>
 
