--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -155,7 +155,7 @@ cnia<!DOCTYPE html>
   <!-- Parte 1: Título y descripción -->
   <div class="text-center mb-5">
     <h2 class="fw-bold">RECONOCIMIENTO A EDIFICACIÓN</h2>
-    <p class="lead">Es el trámite relacionado con la solicitud de reconocimiento de edificaciones, de la licencia urbanística de construcción y de aprobación de otras actuaciones.</p>
+    <p class="lead">De acuerdo con la Curaduría Pública Social: Es el trámite relacionado con la solicitud de reconocimiento de edificaciones, de la licencia urbanística de construcción y de aprobación de otras actuaciones.</p>
   </div>
 
   <!-- Parte 2: Dos columnas -->
