--- a/servicio-destacado.html
+++ b/servicio-destacado.html
@@ -279,6 +279,15 @@ Cuando el esfuerzo vertical efectivo adicional sea menor al 10% del esfuerzo ver
   </div>
 </section>
 
+<section class="bg-light py-5">
+  <div class="container text-center">
+    <h4 class="mb-3">¿Necesitas un servicio técnico especializado? Inicia tu tramite AQUI</h4>
+    <p class="mb-4">Completa el formulario y uno de nuestros expertos se pondrá en contacto contigo. También podrás acceder a nuestros datos de contacto.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfay61gsFcbAFBkH7WDAcDhoTC-9irggslWV3uAWleRKUpFsA/viewform?usp=header">
+      Accede al formulario de contacto
+    </a>
+  </div>
+</section>
 
   
     
